--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,4 +16,5 @@ framework:
     php_errors:
         log: true
 
-    validation: { enable_annotations: true }
+    validation: { enabled: true,
+                  enable_annotations: true }
